trying to fix overflowing behaviour

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,7 @@ body {
 .App {
   -webkit-animation: color-change-2x 6s linear infinite alternate both;
   animation: color-change-2x 6s linear infinite alternate both;
+  overflow-x: hidden;
 }
 
 @-webkit-keyframes color-change-2x {
@@ -39,7 +40,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-
   .intro {
     font-size: 38px;
     text-align: center;
@@ -131,5 +131,7 @@ h1 {
 .shapes {
   position: absolute;
   opacity: 0.1;
-  overflow: hidden;
+  max-width: 100vw;
+  height: auto;
+  object-fit: cover;
 }
